# SUDOKU

./: .app_env.dev  .data_provider_env.dev  .env.dev  LICENSE  Makefile  README.md  docker-compose.yml
services/app/: Dockerfile  entrypoint.sh  manage.py  mypy.ini  pyproject.toml
services/app/project/: __init__.py  app.py  auth.py  config.py  models.py  provider_requests.py  routes.py  validations.py
services/app/static/css/: main.css
services/app/static/js/: sudoku.js
services/app/templates/: base.html  games.html  index.html  login.html  signup.html  sudoku.html
services/app/tests/: test_auth.py  test_provider_requests.py  test_routes.py  test_validations.py
services/data-provider/: Dockerfile  app.py  entrypoint.sh  manage.py  mypy.ini  pyproject.toml
services/data-provider/project/: __init__.py  app.py  config.py  routes.py  sudoku.py
services/data-provider/tests/: test_routes.py
