[tool.poetry]
name = "SUDOKU"
version = "0.1.0"
description = "Sudoku Game!!"
authors = ["Jorge <jlopez@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
marshmallow = "^3.5.1"
request = "^2019.4.13"
flask-marshmallow = "^0.11.0"
marshmallow-sqlalchemy = "^0.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
