[tool.poetry]
name = "SUDOKU"
version = "0.1.0"
description = "Sudoku Game!!"
authors = ["Jorge <jlopez@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
marshmallow = "^3.5.1"
request = "^2019.4.13"
flask-marshmallow = "^0.11.0"
marshmallow-sqlalchemy = "^0.22.3"
flask-login = "^0.5.0"
pytest = "^5.4.1"
flask_login = "^0.5.0"
black = "^19.10b0"
mypy = "^0.770"
isort = "^4.3.21"
psycopg2-binary = "^2.8.5"
werkzeug = "^1.0.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
