[tool.poetry]
name = "SUDOKU"
version = "0.1.0"
description = "Sudoku Game!!"
authors = ["Jorge <jlopez@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
