[tool.poetry]
name = "SUDOKU"
version = "0.1.0"
description = "Sudoku Game!!"
authors = ["Jorge <jlopez@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
pylint-flask-sqlalchemy = "^0.2.0"
jedi = "^0.16.0"
pip = "^20.0.2"
basicsudoku = "^0.1.2"
black = "^19.10b0"
tox = "^3.14.6"
pytest = "^5.2"
request = "^2019.4.13"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
